# ChangeLog for net-im/kadu-globalhotkeys
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Feb 2012; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.11_p31.ebuild:
  Re-added keywords

  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-globalhotkeys-0.9.0_p23.ebuild:
  Removed 0.9.*.

*kadu-globalhotkeys-0.11_p31 (30 Jan 2012)

  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.11_p31.ebuild:
  Bumped.

*kadu-globalhotkeys-0.10_p26 (18 Oct 2011)

  18 Oct 2011; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.10_p26.ebuild:
  Bumped.

*kadu-globalhotkeys-0.10_p25 (25 Aug 2011)

  25 Aug 2011; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.10_p25.ebuild:
  Bumped.

*kadu-globalhotkeys-0.6.5_p18 (09 Mar 2011)

  09 Mar 2011; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p18.ebuild:
  Bumped.

*kadu-globalhotkeys-0.6.5_p15-r2 (08 Feb 2010)

  08 Feb 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p15-r2.ebuild:
  Bumped to Kadu 0.6.5.4.

  24 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Upstream replaced the tarball. Fixing Manifest.

  18 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-globalhotkeys-0.6.5_p14.ebuild:
  Removed cruft.

  16 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-globalhotkeys-0.6.5_p13.ebuild:
  Removed Kadu 0.6.5.4_rc1.

*kadu-globalhotkeys-0.6.5_p15 (12 Jan 2010)

  12 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p15.ebuild:
  Bumped.

  03 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  files/silentmode-api-fix.patch:
  Updated to a nicer version of the patch.

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.5_p14.ebuild:
  Fixed copyright.

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Bumped with patch to fix build error with _rc2.

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.5_p13.ebuild: