@@ -1,3 +1,4 @@
 DIST globalhotkeys-0.10-25.tar.gz 32515 RMD160 6f187d286e8d217887bfd77bcfb4bfac390030b0 SHA1 58ce0848d3c4401926d3af3b7f66b140a03458da SHA256 8cf42e221fd61ab1358029068255f57a072c3852b101a87a8bf7882efcad70ae
 DIST globalhotkeys-0.10-26.tar.gz 32800 RMD160 5dc7d729251343c5ef77a58adfc20ddba21999fd SHA1 e724b8516e1b238e1781c6b3462ef02918d291bd SHA256 e917eecf65147573f77eda36c528acd06240b4d27503bfa12b6993d692ceab1e
 DIST globalhotkeys-0.11-31.tar.gz 33595 RMD160 00c5f7785d096840811bf4d9241b711ef15ae800 SHA1 fcd3279db34878213d2ef4f577d8fc934e5043b6 SHA256 cc756e7b0ef61d7c783821585f83b0e463d738ad1b9da24426f3029fd7e33311
+DIST globalhotkeys-0.12-32.tar.gz 35859 RMD160 ba1d95722b74b953761352a8f8ea606a75e41ebf SHA1 083f9a94923c378803b934ad93f5a24e250e0808 SHA256 3696940aa1a0d9f6ad1576873bc0ab6a4e237cac24c627f0a7284410cdfba72d
