@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kadu-globalhotkeys-0.12_p32 (24 Jun 2012)
+
+  24 Jun 2012; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-globalhotkeys-0.12_p32.ebuild:
+  Bumped.
+
   04 Feb 2012; Michał Ziąbkowski <mziab@o2.pl>
   kadu-globalhotkeys-0.11_p31.ebuild:
   Re-added keywords
